--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,18 +1,15 @@
 .para,
 .small-para {
   color: hsl(0, 100%, 50%);
+  font-size: 30px;
 }
 
 .small-para {
-  font-size: 14px;
+  font-size: 20px;
 }
 
-.para {
-  font-size: 22px;
-}
-
-.confirm {
-  background: green;
+.button.confirm {
+  background-color: green;
   color: white;
   font-weight: bold;
 } 
@@ -23,12 +20,12 @@
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: red;
-  font-size: 14px;
+  font-size: 20px;
 }
 
-div.text {
+.text {
   color: green;
-  font-size: 22px;
+  font-size: 30px;
 }
