--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -14,6 +17,12 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: .5em; 
+  display: flex;
+}
+
+ul li {
+  margin: 1em .5em;
 }
 
 a {
