--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 5px;
 }
 
 .icon {
@@ -31,8 +33,27 @@ body {
   height: 42px;
   border-radius: 50%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex: 1 0 auto;
+  margin: .5em .5em;
+}
+
+.head-close {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  font-size: 18px;
+  font-weight: bold;
+  margin: .5em 0;
+}
+
+.text {
+  margin-bottom: .5em ;
+  margin-right: 1.1em;
 }
 
 .close-button {
@@ -46,11 +67,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: .5em .8em;
 }
 
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  margin: .5em 0;
 }
 
 button.continue {
